--- a/RecrutingAssistant/RecrutingAssistantApp.csproj
+++ b/RecrutingAssistant/RecrutingAssistantApp.csproj
@@ -55,10 +55,48 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="AddDealWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddEmployerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddJobSeekerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddPositionWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddTypeOfWorkWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AddDealWindow.xaml.cs">
+      <DependentUpon>AddDealWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddEmployerWindow.xaml.cs">
+      <DependentUpon>AddEmployerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddJobSeekerWindow.xaml.cs">
+      <DependentUpon>AddJobSeekerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddPositionWindow.xaml.cs">
+      <DependentUpon>AddPositionWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddTypeOfWorkWindow.xaml.cs">
+      <DependentUpon>AddTypeOfWorkWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -67,6 +105,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
