Updated functionality for all tables
Updates on Deal, Employer, JobSeeker, Position, TypeOfWork for Dto, Dao, DtoConverter

--- a/RA.DataAccess/RA.DataAccess.csproj
+++ b/RA.DataAccess/RA.DataAccess.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDao.cs" />
     <Compile Include="DaoFactory.cs" />
     <Compile Include="DealDao.cs" />
     <Compile Include="EmployerDao.cs" />
