--- a/RA.BusinessLayer/RA.BusinessLayer.csproj
+++ b/RA.BusinessLayer/RA.BusinessLayer.csproj
@@ -31,9 +31,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.5.3.1, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.5.3.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +57,7 @@
     <Compile Include="IEmployerProcess.cs" />
     <Compile Include="IJobSeekerProcess.cs" />
     <Compile Include="IPositionProcess.cs" />
+    <Compile Include="IReportGenerator.cs" />
     <Compile Include="ISettingsProcess.cs" />
     <Compile Include="ITypeOfWorkProcess.cs" />
     <Compile Include="JobSeekerProcess.cs" />
@@ -58,6 +65,7 @@
     <Compile Include="PositionProcess.cs" />
     <Compile Include="PositionProcessDb.cs" />
     <Compile Include="ProcessFactory.cs" />
+    <Compile Include="ReportGenerator.cs" />
     <Compile Include="SettingsProcess.cs" />
     <Compile Include="TypeOfWorkProcess.cs" />
     <Compile Include="Converters\DtoConverter.cs" />
@@ -73,6 +81,9 @@
       <Project>{e47c1af2-5b02-40c8-bc73-06eb12b81e8a}</Project>
       <Name>RA.Dto</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
