Added some features
Added new Graph reporting.
TODO: fix known issues

--- a/RA.DataAccess/RA.DataAccess.csproj
+++ b/RA.DataAccess/RA.DataAccess.csproj
@@ -51,15 +51,18 @@
     <Compile Include="Entities\Employer.cs" />
     <Compile Include="Entities\JobSeeker.cs" />
     <Compile Include="Entities\Position.cs" />
+    <Compile Include="Entities\Report.cs" />
     <Compile Include="Entities\TypeOfWork.cs" />
     <Compile Include="IDealDao.cs" />
     <Compile Include="IEmployerDao.cs" />
     <Compile Include="IJobSeekerDao.cs" />
     <Compile Include="IPositionDao.cs" />
+    <Compile Include="IReportItemDao.cs" />
     <Compile Include="ISettingsDao.cs" />
     <Compile Include="ITypeOfWorkDao.cs" />
     <Compile Include="JobSeekerDao.cs" />
     <Compile Include="PositionDao.cs" />
+    <Compile Include="ReportItemDao.cs" />
     <Compile Include="SettingsDao.cs" />
     <Compile Include="TypeOfWorkDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
